# mroptimum

./: .gitignore  README.md  chengelog  pyproject.toml
json/: acsense.json  crsense.json  pmrsense.json
matlab/: SISsmoothedImage.m  SISsmoothedImageMeanconvolution.m  mroACM.m  mroACMB1.m  mroACMESPIRiT.m  mroACMGRAPPA.m  mroACMGRAPPA.m~  mroACMRSS.m  mroACMSENSE.m  mroCR.m  mroDI.m  mroDIPrice.m  mroDITIC.m  mroDM.m  mroPMR.m  mroSIS.m
matlab/mroptimum_test/: CONF.mat  FAST_worker.m  MR_worker.m  PMR_worker.m  mr_optimum_example.m  mr_optimumexample_worker.m  somedefine.m
matlab/tasks/: ACMWORKER.m  ACMtask.m  CLOUDMR2DDI.m  CRWORKER.m  CRtask.m  DItask.m  MRtask.m  PMRWORKER.m  PMRtask.m  RECONtask.m  readme.md  taskcreateneededclass.m  taskdataloader.m  taskgatherdata.m
matlab/tasks/TODO/: MRWORKER.m  MRtask.m  RECONWORKER.m
matlab/test/: init.m  thescripttobecalled.m  thescripttobecalledACM.m  thescripttobecalledCR.m  thescripttobecalledMR.m  thescripttobecalledPMR.m
matlab/utils/: cm2DReconGetDefaultOptionsForType.m  marksDiffenceOfPixels.m  mro2DFromType.m  mro2DReconGetDefaultOptionsForType.m
mroptimum/: a.py  generate-ui.py  generate.py  generateJson.py  grappa_test.py  mro.py  parsnrv1.py  sense_t.py  snr.py  snrv1.py  t.py
mroptimum/collections/AC/: b1_settings.json  rss_settings.json  sense_real_settings.json  sense_settings.json
mroptimum/collections/CR/: b1_settings.json  grappa_settings.json  rss_settings.json  sense_real_settings.json  sense_settings.json
mroptimum/collections/MR/: b1_settings.json  grappa_settings.json  rss_no_noise_settings.json  rss_settings.json  sense_settings.json
mroptimum/collections/PMR/: b1_settings.json  grappa_settings.json  rss_settings.json  sense_real_settings.json  sense_settings.json
mroptimum/collections/misc/: b1_settings.json  sense_settings_mask.json
test/: SIS_test.m  SIS_test_comparison_with_reconstruciton.m  rss.mat  rss_test_multiplenoise.m
