[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["**/*.py"]

[project]
name = "mroptimum"
version = "0.9.9.3"
authors = [
  { name="Dr. Eros Montin, PhD", email="eros.montin@gmail.com" },
]
description = "SNR and Recon"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["boto3","matplotlib","scipy","Pillow","cloudmrhub @ git+https://github.com/cloudmrhub-com/cloudmrhub.git","raider_eros_montin @ git+https://github.com/erosmontin/raider.git","pynico_eros_montin @ git+https://github.com/erosmontin/pynico.git","pyable_eros_montin @ git+https://github.com/erosmontin/pyable.git"]

[project.urls]
"Homepage" = "https://github.com/cloudmrhub-com/mroptimum"
"Bug Tracker" = "https://github.com/cloudmrhub-com/mroptimum/issues"
